audiodecoder: Don't leak events

https://bugzilla.gnome.org/show_bug.cgi?id=736788